@@ -77,6 +77,7 @@ Gold Wings (French)
 Gold Wings (French Free Play)
 Gold Wings (German)
 Gold Wings (German Free Play)
+Harley Davidson (Bally, L-2 and D-2)
 Haunted House (rev. 3 unofficial MOD)
 Haunted House (rev. 3 unofficial MOD, LED)
 Haunted House (rev. 3 unofficial MOD, LED+Secret Tunnel)
